--- a/app/src/main/res/layout/coordinates_mgrs_fragment.xml
+++ b/app/src/main/res/layout/coordinates_mgrs_fragment.xml
@@ -2,26 +2,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/CoordinatesFragment"
+    style="@style/LocationCoordinatesFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.elyeproj.loaderviewlibrary.LoaderTextView
         android:id="@+id/coordinatesTextView"
+        style="@style/LocationCoordinate"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="12dp"
         android:gravity="center"
         android:maxLines="1"
         app:autoSizeTextType="uniform"
-        app:corners="4"
-        app:custom_color="@color/loaderViewShimmer"
-        app:height_weight="0.8"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/formatLabelTextView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="MGRS" />
 
     <TextView
-        style="@style/CoordinatesFormatLabel"
+        android:id="@+id/formatLabelTextView"
+        style="@style/TextAppearance.Positional.Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
