--- a/app/src/main/res/layout/compass_fragment.xml
+++ b/app/src/main/res/layout/compass_fragment.xml
@@ -55,10 +55,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:contentDescription="@string/compass_degrees_content_description_unknown"
             android:gravity="center"
-            app:autoSizeTextType="uniform"
             app:layout_constraintBottom_toTopOf="@id/detailsLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent=".20"
@@ -69,7 +68,7 @@
             android:id="@+id/detailsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/degreesTextView">
 
@@ -79,7 +78,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/compass_accuracy_title"
-                android:textSize="@dimen/compass_details_text_size"
                 app:layout_constraintBottom_toTopOf="@id/accelerometerAccuracyLabelTextView"
                 app:layout_constraintEnd_toStartOf="@id/modeTitleTextView"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,12 +86,12 @@
 
             <TextView
                 android:id="@+id/accelerometerAccuracyLabelTextView"
+                style="@style/CompassAttributeValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:labelFor="@id/accelerometerAccuracyTextView"
                 android:text="@string/compass_accuracy_accelerometer_label"
-                android:textSize="@dimen/compass_details_text_size"
                 app:layout_constraintBottom_toTopOf="@id/magnetometerAccuracyLabelTextView"
                 app:layout_constraintEnd_toStartOf="@id/accelerometerAccuracyTextView"
                 app:layout_constraintHorizontal_bias="0"
@@ -107,7 +105,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="@dimen/compass_details_accuracy_min_width"
-                android:textSize="@dimen/compass_details_text_size"
                 app:layout_constraintBottom_toBottomOf="@id/accelerometerAccuracyLabelTextView"
                 app:layout_constraintEnd_toEndOf="@id/accuracyTitleTextView"
                 app:layout_constraintHorizontal_bias="0"
@@ -117,13 +114,13 @@
 
             <TextView
                 android:id="@+id/magnetometerAccuracyLabelTextView"
+                style="@style/CompassAttributeValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:gravity="end"
                 android:labelFor="@id/magnetometerAccuracyTextView"
                 android:text="@string/compass_accuracy_magnetometer_label"
-                android:textSize="@dimen/compass_details_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/magnetometerAccuracyTextView"
                 app:layout_constraintHorizontal_bias="0"
@@ -137,7 +134,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="@dimen/compass_details_accuracy_min_width"
-                android:textSize="@dimen/compass_details_text_size"
                 app:layout_constraintBottom_toBottomOf="@id/magnetometerAccuracyLabelTextView"
                 app:layout_constraintEnd_toEndOf="@id/accelerometerAccuracyTextView"
                 app:layout_constraintStart_toEndOf="@id/magnetometerAccuracyLabelTextView"
@@ -152,7 +148,6 @@
                 android:gravity="end"
                 android:labelFor="@id/modeTextView"
                 android:text="@string/compass_mode_title"
-                android:textSize="@dimen/compass_details_text_size"
                 app:layout_constraintBottom_toTopOf="@id/modeTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/accuracyTitleTextView"
@@ -167,7 +162,6 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:minWidth="@dimen/compass_details_mode_min_width"
-                android:textSize="@dimen/compass_details_text_size"
                 app:layout_constraintBottom_toTopOf="@id/declinationLabelTextView"
                 app:layout_constraintEnd_toEndOf="@id/modeTitleTextView"
                 app:layout_constraintHorizontal_bias="1"
@@ -177,12 +171,12 @@
 
             <TextView
                 android:id="@+id/declinationLabelTextView"
+                style="@style/CompassAttributeValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:labelFor="@id/declinationTextView"
                 android:text="@string/compass_declination_label"
-                android:textSize="@dimen/compass_details_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/declinationTextView"
                 app:layout_constraintHorizontal_bias="1"
@@ -195,7 +189,7 @@
                 style="@style/CompassAttributeValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/compass_details_text_size"
+                android:minWidth="12dp"
                 app:layout_constraintBottom_toBottomOf="@id/declinationLabelTextView"
                 app:layout_constraintEnd_toEndOf="@id/modeTextView"
                 app:layout_constraintStart_toEndOf="@id/declinationLabelTextView"
